[FLINK-39806][build] Add jdk25 required flags